attempt to create my own Dropbox API in plain java